--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ alembic = "^1.11.1"
 rich = "^13.4.2"
 redis = "^4.5.5"
 httpx = "^0.24.1"
+pytest-asyncio = "^0.21.0"
+greenlet = "^2.0.2"
 
 
 [build-system]
